updated: profile photo

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Sina Mansour L."
-  avatar           : "profile.png"
+  avatar           : "avatar.jpg"
   bio              : "PhD Candidate at The University of Melbourne, Network science enthusiast studying connectomics"
   location         : "Melbourne, Australia"
   employer         :
