--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,7 @@ comments:
     appid                :
     num_posts            : # 5 (default)
     colorscheme          : # "light" (default), "dark"
+    # colorscheme          : "dark"
 staticman:
   allowedFields          : ['name', 'email', 'url', 'message']
   branch                 : "gh-pages" # "master", "gh-pages"
@@ -309,3 +310,7 @@ compress_html:
   clippings: all
   ignore:
     envs: development
+
+# add a Jekyll theme:
+# theme: jekyll-theme-cayman
+# theme: jekyll-theme-midnight
