fixed broken url to stackoverflow account

--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ author:
   orcid            : "https://orcid.org/0000-0002-5695-5696"
   pinterest        :
   soundcloud       :
-  stackoverflow    : "https://stackoverflow.com/users/7061570/sina-mansour-l"
+  stackoverflow    : "7061570/sina-mansour-l"
   steam            :
   tumblr           :
   twitter          : "Sina_Mansour_L"
