--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,10 @@ title                    : "Sina Mansour L."
 title_separator          : "-"
 name                     : &name "Sina Mansour L."
 description              : &description "PhD Candidate at The University of Melbourne"
+# url                      : localhost:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 url                      : https://sina-mansour.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
+# repository               : "localhost:4000"
 repository               : "sina-mansour.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
@@ -82,7 +84,7 @@ analytics:
 # Site Author
 author:
   name             : "Sina Mansour L."
-  avatar           : "avatar.jpg"
+  avatar           : "avatar.png"
   bio              : "PhD Candidate at The University of Melbourne, Network science enthusiast studying connectomics"
   location         : "Melbourne, Australia"
   employer         :
