--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,10 @@ locale                   : "en-US"
 title                    : "Sina Mansour L."
 title_separator          : "-"
 name                     : &name "Sina Mansour L."
-description              : &description "PhD Candidate at The University of Melbourne"
-# url                      : localhost:4000 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-url                      : https://sina-mansour.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+description              : &description "Postdoctoral Research Fellow at The University of Melbourne"
+url                      : http://personal.website # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+# url                      : https://sina-mansour.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-# repository               : "localhost:4000"
 repository               : "sina-mansour.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
@@ -85,7 +84,7 @@ analytics:
 author:
   name             : "Sina Mansour L."
   avatar           : "avatar.png"
-  bio              : "PhD Candidate at The University of Melbourne, Network science enthusiast studying connectomics"
+  bio              : "Postdoctoral Research Fellow at <a href='http://www.sysneuro.org/'>MNC Systems lab</a>, <br> The University of Melbourne, Network science enthusiast admiring the brain"
   location         : "Melbourne, Australia"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
@@ -268,6 +267,7 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jekyll-redirect-from
+  # - jekyll-remote-theme
 # mimic GitHub Pages with --safe
 whitelist:
   - jekyll-paginate
@@ -316,3 +316,4 @@ compress_html:
 # add a Jekyll theme:
 # theme: jekyll-theme-cayman
 # theme: jekyll-theme-midnight
+# remote_theme: pages-themes/midnight@v0.2.0
