--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,8 @@ title                    : "Sina Mansour L."
 title_separator          : "-"
 name                     : &name "Sina Mansour L."
 description              : &description "Postdoctoral Research Fellow at The University of Melbourne"
-url                      : http://personal.website # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-# url                      : https://sina-mansour.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+# url                      : http://personal.website # this is used for development only
+url                      : https://sina-mansour.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "sina-mansour.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
